--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -127,9 +127,7 @@ linters:
 
   PropertySortOrder:
     enabled: true
-    ignore_unspecified: false
-    min_properties: 2
-    separate_groups: false
+    order: concentric
 
   PropertySpelling:
     enabled: true
